# DAMR

./: Main.py  README.md
Communication/cpp_sockets/: CMakeLists.txt  README.md  main.cpp
Communication/cpp_sockets/include/: client.hpp
Communication/cpp_sockets/src/: client.cpp
Communication/python/: client.py  wp1_server.py  wp2_client.py  wp3_client.py
Depth Estimation/: .gitignore  StereoNet_single.py  matlab_calibration.mat
Depth Estimation/data/: checkpoint_pretrain_secneflow.pth
Depth Estimation/kinectFusion_CPlusPlus/: CMakeLists.txt  KinfuPlarr.h  lib2.cpp  module.cpp  readme.md
Depth Estimation/kinfu_python_wrapper/: CMakeLists.txt  KinfuPlarr.h  install.sh  lib1.cpp  module.cpp  readme.md  setup.py  test.py
Depth Estimation/notebooks/: DepthMaps.ipynb  Kinfu_C++_with_python_wrapper.ipynb  Kinfu_python.ipynb  OpenCV StereoBM.ipynb  RealSense Calibration.ipynb
Depth Estimation/src/: main.py  server.py
HumanPose/: README.md  checkpoint_iter_370000.pth  demo.py
MarkerTrackerPy/: Config.txt  GenerateCharucoBoard.py  MarkerTracking.py  README.md
RealismEmbedding/: Harmonization.py  README.md
RealismEmbedding/data/: intrinsic.txt  pose.txt
RealismEmbedding/data/depth_bg/: info.txt
docs/: demo.txt
